{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 131,
  "lineage": "ca0858fc-3456-0bc6-b4ce-934342314f70",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "node-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07fd804dbb845b299",
            "arn": "arn:aws:ec2:us-east-1:134857759301:elastic-ip/eipalloc-07fd804dbb845b299",
            "domain": "vpc",
            "id": "eipalloc-07fd804dbb845b299",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-72-146-151.compute-1.amazonaws.com",
            "public_ip": "52.72.146.151",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "node-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134857759301:internet-gateway/igw-0d304940ac513755a",
            "id": "igw-0d304940ac513755a",
            "owner_id": "134857759301",
            "region": "us-east-1",
            "tags": {
              "Name": "node-gw"
            },
            "tags_all": {
              "Name": "node-gw"
            },
            "vpc_id": "vpc-022f63c5e4ebc6432"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "node-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07fd804dbb845b299",
            "association_id": "eipassoc-081f1192cb16712f5",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0505342c18c389a2d",
            "network_interface_id": "eni-09c77813ad0c57429",
            "private_ip": "10.0.0.67",
            "public_ip": "52.72.146.151",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-053222ff95d297c1e",
            "tags": {
              "Name": "node-nat"
            },
            "tags_all": {
              "Name": "node-nat"
            },
            "vpc_id": "vpc-022f63c5e4ebc6432"
          },
          "dependencies": [
            "aws_eip.node-eip",
            "aws_internet_gateway.node-gw",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134857759301:route-table/rtb-06dabfb0260bd0c5a",
            "id": "rtb-06dabfb0260bd0c5a",
            "owner_id": "134857759301",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0505342c18c389a2d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-022f63c5e4ebc6432"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.node-eip",
            "aws_internet_gateway.node-gw",
            "aws_nat_gateway.node-nat",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134857759301:route-table/rtb-0fcc7a1b8abb6fc5d",
            "id": "rtb-0fcc7a1b8abb6fc5d",
            "owner_id": "134857759301",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d304940ac513755a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-022f63c5e4ebc6432"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.node-gw",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c25f8386e88d96b",
            "region": "us-east-1",
            "route_table_id": "rtb-06dabfb0260bd0c5a",
            "subnet_id": "subnet-089ea188cc55abdac"
          },
          "dependencies": [
            "aws_eip.node-eip",
            "aws_internet_gateway.node-gw",
            "aws_nat_gateway.node-nat",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01feafb28a752489c",
            "region": "us-east-1",
            "route_table_id": "rtb-06dabfb0260bd0c5a",
            "subnet_id": "subnet-0fdd654b3e352d75f"
          },
          "dependencies": [
            "aws_eip.node-eip",
            "aws_internet_gateway.node-gw",
            "aws_nat_gateway.node-nat",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c47ce5d7478cb54d",
            "region": "us-east-1",
            "route_table_id": "rtb-0fcc7a1b8abb6fc5d",
            "subnet_id": "subnet-053222ff95d297c1e"
          },
          "dependencies": [
            "aws_internet_gateway.node-gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080d6c6956cbc0ba0",
            "region": "us-east-1",
            "route_table_id": "rtb-0fcc7a1b8abb6fc5d",
            "subnet_id": "subnet-0c139e30d97c8dde2"
          },
          "dependencies": [
            "aws_internet_gateway.node-gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134857759301:security-group/sg-0c850991460e16935",
            "description": "Security group for EKS cluster",
            "egress": [],
            "id": "sg-0c850991460e16935",
            "ingress": [],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "134857759301",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022f63c5e4ebc6432"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134857759301:security-group/sg-06c13743d319cdd66",
            "description": "Nodes SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c13743d319cdd66",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c850991460e16935"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-node-sg",
            "name_prefix": "",
            "owner_id": "134857759301",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022f63c5e4ebc6432"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134857759301:subnet/subnet-089ea188cc55abdac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089ea188cc55abdac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134857759301",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-022f63c5e4ebc6432"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134857759301:subnet/subnet-0fdd654b3e352d75f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdd654b3e352d75f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134857759301",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-022f63c5e4ebc6432"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134857759301:subnet/subnet-053222ff95d297c1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053222ff95d297c1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134857759301",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-022f63c5e4ebc6432"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134857759301:subnet/subnet-0c139e30d97c8dde2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c139e30d97c8dde2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134857759301",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-022f63c5e4ebc6432"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "node-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134857759301:vpc/vpc-022f63c5e4ebc6432",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037174c1e28f65eaa",
            "default_route_table_id": "rtb-0a1db6906a722f1e5",
            "default_security_group_id": "sg-07e52ca5c4d167d50",
            "dhcp_options_id": "dopt-079efb21ed6f141a0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-022f63c5e4ebc6432",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a1db6906a722f1e5",
            "owner_id": "134857759301",
            "region": "us-east-1",
            "tags": {
              "Name": "node-vpc"
            },
            "tags_all": {
              "Name": "node-vpc"
            }
          }
        }
      ]
    }
  ]
}